--- a/signup.html
+++ b/signup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>GPA</title>
+	<title>Animated Login Form</title>
 	<link rel="stylesheet" type="text/css" href="signup.css">
 	<link href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/a81368914c.js"></script>
@@ -29,10 +29,9 @@
            		    	<i class="fas fa-envelope"></i>
            		   </div>
            		   <div class="div">
-           		    	<input type="email" class="input" placeholder="Email">
+           		    	<input type="email" class="input" placeholder="email">
             	   </div>
             	</div>
-            	
             	<input type="submit" class="btn" value="Next">
             </form>
         </div>
